# komga-suwayomi-sync

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  truenas-app.yml
src/: config.py  logging_setup.py  main.py
src/health/: server.py
src/komga/: client.py  sse.py
src/matching/: matcher.py
src/suwayomi/: client.py
src/sync/: cache.py  engine.py  unmatched.py
