[project]
name = "komga-suwayomi-sync"
version = "0.1.0"
description = "Sync read progress from Komga to Suwayomi"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "httpx>=0.27,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
]

[project.scripts]
komga-suwayomi-sync = "src.main:entry_point"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
